# escrow-service-bot

./: .firebaserc  .flake8  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.txt  WEB3_TESTING_README.md  alembic.ini  balance_checking_test_results_20250601_141446.json  balance_checking_test_results_20250604_022752.json  balance_checking_test_results_20250604_023136.json  balance_checking_test_results_20250604_025212.json  balance_checking_test_results_20250604_025554.json  balance_checking_test_results_20250604_025826.json  balance_checking_test_results_20250605_020233.json  balance_checking_test_results_20250605_022300.json  bot.py  btcpay.py  cleanup_test_results.py  cloudbuild.yaml  config.py  deploy.sh  dev.sh  docker-compose.yml  entrypoint.sh  firebase_function.py  fix_invoice_id_issue.py  functions.py  functions_old.py  keyboard.py  main.py  model.py  pyproject.toml  quick_setup.py  requirements.txt  run_web3_tests.bat  run_web3_tests.sh  schema.prisma  (+25 more)
.claude/agents/: escrow-bot-developer.md  issue-analyzer.md
.github/workflows/: ci.yml  debug.yml  deploy.yml  main.yml  python-tests.yml  test.yml
alembic/: env.py
alembic/versions/: 481372a5a95d_rewrite_schemas.py  620f0095b52d_initial.py  8037fe4346eb_change_user_id_to_string.py  823a79edff09_re_create_tables.py  d53f89a90559_initial.py  db8ac6fc2df0_add_wallet_to_user_table.py  e0375da955c8_add_terms.py
api/: __init__.py
api/routes/: __init__.py  beat.py  dispute.py  sources.py  trade.py  user.py
community/: __init__.py  admin_handlers.py  content_generator.py  poster.py  scheduler.py  test_system.py
database/: __init__.py  models.py  types.py
functions/: __init__.py  broker.py  trade.py  user.py  utils.py  wallet.py
functions/scripts/: bsc_wallet_balance.py  bscwalletgen.py  doge_transaction_checker.py  doge_transaction_sender.py  dogewalletgen.py  get_bnb_balance.py  ltc_transaction_checker.py  ltctransactionsender.py  ltcwalletgen.py  simple_bnb_transaction.py  simple_sol_to_sol_sender.py  solwalletbalance.py  solwalletgen.py  tronwalletgen.py  usdt_bnb_sender.py  usdt_eth_sender.py  usdt_sol_sender.py  usdt_tron_sender.py  utils.py  wallet_utils.py
handlers/: __init__.py  admin.py  affiliate.py  agent.py  broker.py  callbacks.py  delete_trade.py  history.py  initiate_trade.py  join.py  mytrades.py  registry.py  report.py  review.py  rules.py  session.py  start.py  user.py  verdict.py  verify.py  wallet.py  webhook.py
handlers/trade_flows/: __init__.py  crypto.py  fiat.py  market.py  product.py
payments/: __init__.py  btcpay.py  forgingblock.py
tests/: README.md  __init__.py  conftest.py  test_config.py  test_fiat_flow.py  test_handlers.py  test_production_config.py  test_trade.py  test_wallet_functionality.py
tests/integration/: test_trade_cleanup.py  test_wallet_balance.py
tests/service/: test_app_health.py  test_buyer_address_collection_flow.py  test_mytrades_flow.py  test_telegram_buyer_join_flow.py  test_telegram_join_flow.py
tests/unit/: test_admin_broadcast.py  test_buyer_address_flow.py  test_community_system.py  test_mytrades_handler.py  test_pay_callback.py  test_trade.py  test_trade_type_display.py  test_wallet.py
utils/: __init__.py  enums.py  keyboard.py  messages.py  trade_status.py
