[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "escrow-service-bot"
version = "1.0.0"
description = "Telegram escrow service bot for secure trading"
authors = [
    {name = "Escrow Bot Team"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiofiles>=24.1.0",
    "aniso8601>=8.1.1",
    "anyio>=4.9.0",
    "base58>=2.1.1",
    "blinker>=1.5",
    "blockchain>=1.4.4",
    "certifi>=2020.4.5.1",
    "cffi>=1.17.1",
    "chardet>=3.0.4",
    "charset-normalizer>=3.4.1",
    "click>=8.1.8",
    "coverage>=7.8.0",
    "cryptocompare>=0.7.0",
    "cryptography>=43.0.3",
    "decorator>=4.4.2",
    "dnspython>=2.7.0",
    "emoji>=0.5.4",
    "enum-compat>=0.0.3",
    "eth-account>=0.13.4",
    "Flask>=2.2.5",
    "Flask-RESTful>=0.3.10",
    "future>=0.18.2",
    "h11>=0.14.0",
    "h2>=4.2.0",
    "hpack>=4.1.0",
    "httpcore>=1.0.7",
    "httpx>=0.28.1",
    "Hypercorn>=0.17.3",
    "hyperframe>=6.1.0",
    "idna>=2.9",
    "iniconfig>=2.1.0",
    "itsdangerous>=2.2.0",
    "Jinja2>=3.1.6",
    "MarkupSafe>=3.0.2",
    "mnemonic>=0.21",
    "packaging>=25.0",
    "pluggy>=1.5.0",
    "priority>=2.0.0",
    "pycparser>=2.20",
    "pycryptodome>=3.9.7",
    "pymongo>=4.3.3",
    "pyTelegramBotAPI>=3.6.7",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "mongomock>=4.1.2",
    "python-dotenv>=0.13.0",
    "python-telegram-bot[tests]>=22.0",
    "pytz>=2021.1",
    "quart>=0.18.4",
    "requests>=2.32.3",
    "six>=1.15.0",
    "sniffio>=1.3.1",
    "SQLAlchemy>=1.3.16",
    "tornado>=6.0.4",
    "urllib3>=2.3.0",
    "web3>=7.6.0",
    "Werkzeug>=2.2.3",
    "wsproto>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["handlers", "functions", "utils", "payments", "database"]
known_third_party = ["telegram", "quart", "pytest", "mongomock"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    ".eggs",
    "*.egg",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
    ".eggs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "service: marks tests as service tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/__pycache__/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
] 